Fixing iOS viewing and overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -94,6 +94,7 @@ input {
   position: fixed;
   height: 100vh;
   width: 100%;
+  overflow: auto;
 }
 
 .mobile-background-image {
@@ -122,10 +123,10 @@ input {
 .mobile-text-container {
   position: fixed;
   width: 100%;
-  height: 90vh;
+  height: 80vh;
   margin-top: 2%;
   padding-left: 3.5%;
-  overflow-y: scroll;
+  overflow: scroll;
   max-height: fit-content;
 }
 
